package edu.fiuba.algo3.modelo;

public interface Mineral {

	public int mineralRestante();
	
	public int recolectarMineral(int unaCantidad);
	
	boolean tieneMineral();

	}